# oriv

./: .gitignore  Cargo.toml  LICENSE  build.rs  slint.toml
.claude/: settings.local.json
docs/: packaging-guide.md  slint-1.15-upgrade.md  slint_tutorial.md
installer-bootstrap/: Cargo.toml  build.rs
installer-bootstrap/src/: main.rs
installer-bootstrap/ui/: setup-window.slint
src/: main.rs
src/proxy/: ca.rs  mod.rs  server.rs
ui/: app-window.slint  app-window.slint.bak  app-window.slint.bak2  lucide.slint
ui/common/: tab-button.slint  toggle-switch.slint
ui/components/: button.slint  index.slint  input.slint  textarea-test.slint  textarea.slint  title-bar.slint
ui/components/data-display/: card.slint  index.slint  tag.slint
ui/components/data-entry/: index.slint  input.slint  select.slint  switch.slint  textarea.slint
ui/components/general/: button.slint  index.slint
ui/components/layout/: index.slint  sidebar.slint  title-bar.slint
ui/components/navigation/: index.slint  tabs.slint
ui/layouts/: title-bar.slint
ui/pages/api-tester/: page.slint
ui/pages/proxy-manager/: page.slint
ui/pages/proxy-manager/components/: certificates.slint  hosts.slint  logs.slint  proxies.slint  rules.slint
wix/: main.wxs
