[package]
name = "oriv"
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
description = "A Slint-based GUI application"

[dependencies]
# 启用 Skia 渲染器以获得更好的字体渲染质量
# 注意：renderer-skia 仍在实验阶段，如果遇到问题可以换回 renderer-femtovg
slint = { version = "1.14.1", features = ["backend-winit", "renderer-skia"] }
i-slint-backend-winit = "1.14.1"

[package.metadata.bundle]
name = "Oriv"
identifier = "com.oriv.app"
icon = ["assets/app-icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "Utility"
short_description = "A Slint-based GUI application"
long_description = "A cross-platform GUI application built with Slint framework"

[build-dependencies]
slint-build = "1.14.1"

[target.'cfg(windows)'.dependencies]
# Windows DPI 感知 API
winapi = { version = "0.3", features = ["shellscalingapi", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
