[package]
name = "oriv"
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
description = "A Slint-based GUI application"

[dependencies]
# 启用 Skia 渲染器以获得更好的字体渲染质量
# 注意：renderer-skia 仍在实验阶段，如果遇到问题可以换回 renderer-femtovg
slint = { version = "1.14.1", features = ["backend-winit", "renderer-femtovg"] }
i-slint-backend-winit = "1.14.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
rcgen = "0.14"
time = { version = "0.3.44", features = ["formatting", "macros"] }
rsa = "0.9.9"
dirs = "6.0"
rfd = "0.15"

[package.metadata.bundle]
name = "Oriv"
identifier = "com.oriv.app"
icon = ["assets/app-icon.png"]
version = "0.1.0"
copyright = "Copyright (c) 2025"
category = "Utility"
short_description = "A Slint-based GUI application"
long_description = "A cross-platform GUI application built with Slint framework"

[build-dependencies]
lucide-slint = "0.1.4"
slint-build = "1.14.1"

[target.'cfg(windows)'.dependencies]
# Windows DPI 感知 API
winapi = { version = "0.3", features = ["shellscalingapi", "winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
strip = true  # 自动剥离符号
opt-level = "z"  # 优化体积
lto = true  # 开启链接时优化
codegen-units = 1  # 减少并行代码生成单元以提高优化效果
panic = "abort"  # 禁用 panic unwind，减小体积
