[package]
name = "oriv-bootstrapper"
version = "0.1.0"
edition = "2021"
publish = false

[features]
# embed_msi: 在构建时将 MSI 内嵌到引导程序中，需先生成 MSI。
embed_msi = []

[dependencies]
anyhow = "1.0"
rfd = "0.15"
slint = { version = "1.14.1", features = ["backend-winit", "renderer-skia"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
strip = true  # 自动剥离符号
opt-level = "z"  # 优化体积
lto = true  # 开启链接时优化
codegen-units = 1  # 减少并行代码生成单元以提高优化效果
panic = "abort"  # 禁用 panic unwind，减小体积
